syntax = "proto3";

package crude.crude;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "crude/crude/params.proto";
import "crude/crude/user.proto";

option go_package = "crude/x/crude/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/crude/crude/params";
  
  }
  
  // Queries a list of User items.
  rpc User    (QueryGetUserRequest) returns (QueryGetUserResponse) {
    option (google.api.http).get = "/crude/crude/user/{id}";
  
  }
  rpc UserAll (QueryAllUserRequest) returns (QueryAllUserResponse) {
    option (google.api.http).get = "/crude/crude/user";
  }

  rpc UserAllByAddress (QueryAllUserAddressRequest) returns (QueryAllUserAddressResponse) {
    option (google.api.http).get = "/crude/crude/user";
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryGetUserRequest {
  uint64 id = 1;
}

message QueryGetUserResponse {
  User User = 1 [(gogoproto.nullable) = false];
}

message QueryAllUserRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllUserAddressRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
  string address = 2;
}

message QueryAllUserResponse {
  repeated User                                   User       = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryAllUserAddressResponse {
  repeated User                                   User       = 1 [(gogoproto.nullable) = false];
}
